# libdrip

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.forgejo/workflows/: examples.yaml  test.yaml
examples/: CMakeLists.txt
examples/auth/: Makefile  example_auth.c
examples/cli/: Makefile  README.md  example_cli.c
examples/det/: Makefile  README.md  det_generate.c  det_verify.c
examples/link/: Makefile  README.md  example_link_sign.c  example_link_verify.c  link_verify.c
examples/manifest/: Makefile  example_sign.c  example_verify.c  manifest_sign.c  manifest_verify.c
include/drip/: det.h  format.h  hash.h  link.h  manifest.h
src/: det.c  hash.c  link.c  manifest.c
tests/: CMakeLists.txt  Makefile  test_det.c  test_hash.c  test_link.c  test_manifest.c  unit.c  unit.h
